# defi-agent-toolkit

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml
config/: default.yaml
src/defi_agent/: __init__.py  cli.py
src/defi_agent/chains/: __init__.py
src/defi_agent/core/: __init__.py  config.py  optimizer.py  portfolio.py  router.py  security.py
src/defi_agent/strategies/: __init__.py  auto_compound.py
src/defi_agent/utils/: gas.py  prices.py
tests/: test_security.py
